Implemented a log retention policy.
- The user is able to change for how long we can keep the execution
logs. - default to 7 days
